--- a/documentation/modules/configuring/proc-manual-delete-pod-pvc-kafka.adoc
+++ b/documentation/modules/configuring/proc-manual-delete-pod-pvc-kafka.adoc
@@ -12,12 +12,16 @@ This procedure describes how to delete an existing Kafka node by using a Kuberne
 Deleting a Kafka node consists of deleting both the `Pod` on which the Kafka broker is running and the related `PersistentVolumeClaim` (if the cluster was deployed with persistent storage).
 After deletion, the `Pod` and its related `PersistentVolumeClaim` are recreated automatically.
 
+Use this procedure only after attempting non-destructive recovery actions.
+For guidance on recovery options, see
+xref:con-kafka-recovering-brokers-{context}[Recovering from broker storage issues].
+
 WARNING: Deleting a `PersistentVolumeClaim` can cause permanent data loss and the availability of your cluster cannot be guaranteed.
 The following procedure should only be performed if you have encountered storage issues.
 
 .Prerequisites
 
-* A running Cluster Operator
+* The Cluster Operator that manages the Kafka cluster is running.
 
 .Procedure
 
@@ -31,4 +35,6 @@ For example, `my-cluster-kafka-0`.
 [source,shell,subs="+quotes,attributes+"]
 kubectl annotate pod <cluster_name>-kafka-<index_number> strimzi.io/delete-pod-and-pvc="true"
 
-. Wait for the next reconciliation, when the annotated pod with the underlying persistent volume claim will be deleted and then recreated.
+. Wait for the next reconciliation.
+The annotated pod and its associated persistent volume claim are deleted and then recreated automatically.
+
