--- a/documentation/modules/configuring/con-config-mirrormaker2-sync-acls.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-sync-acls.adoc
@@ -11,15 +11,20 @@
 MirrorMaker 2 can synchronize topic ACL rules from source to target clusters. 
 Enable this feature by configuring the `MirrorSourceConnector`.
 
-With `simple` authorization:
+When using simple ACL-based authorization:
 
-* ACL rules apply to both source and target topics
-* Users with source topic access automatically get equivalent target topic access
+* Topic ACL rules can be synchronized between source and target topics
+* MirrorMaker 2 copies topic-related ACL rules from the source cluster to the target cluster
+* The `ALLOW ALL` topic ACL is not copied
 
-IMPORTANT: This feature is not compatible with the User Operator, so disable by setting `sync.topic.acls.enabled` to `false`.
+Copying ACL rules does not guarantee equivalent access for all operations on the target cluster.
+Additional ACL rules may still be required to allow producers or consumers to operate as expected on the target cluster, for example, ACLs for other resource types such as consumer groups or transactional IDs.
+
+IMPORTANT: This feature is not compatible with the User Operator. 
+If you use the User Operator, set `sync.topic.acls.enabled` to `false`.
 When using OAuth 2.0 authorization, the setting has no effect.
 
-.Example configuration to enable offset synchronization
+.Example configuration to enable ACL synchronization
 [source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: {KafkaMirrorMaker2ApiVersion}
@@ -34,4 +39,4 @@ metadata:
         config:
           sync.topic.acls.enabled: "true" # <1>
 ----
-<1> Replicates all source topic ACLs to the target cluster.
+<1> Copies topic-related ACL rules from the source cluster to the target cluster.
