--- a/documentation/modules/configuring/con-config-mm2-multiple-instances.adoc
+++ b/documentation/modules/configuring/con-config-mm2-multiple-instances.adoc
@@ -8,8 +8,25 @@
 = Configuring MirrorMaker 2 using a shared target Kafka cluster
 
 [role="_abstract"]
-The group ID and names of the internal topics used by the Kafka Connect framework that MirrorMaker 2 runs on are configured in the `.spec.target` section. 
-When running multiple instances of MirrorMaker 2, and they share the same target cluster, you must use unique values to make sure the MirrorMaker 2 clusters operate independently.
+MirrorMaker 2 runs on the Kafka Connect framework and uses internal Kafka topics to store configuration, offsets, and status information.
+
+You can run multiple MirrorMaker 2 connectors in a single Kafka Connect cluster, for example to replicate data from multiple source Kafka clusters to the same target Kafka cluster.
+
+When running multiple Kafka Connect clusters that replicate data to the same target Kafka cluster, you must configure unique Kafka Connect worker settings so that each cluster operates independently.
+
+This requirement applies across all Kafka Connect–based deployments, including Kafka Connect and  MirrorMaker 2 instances that target the same Kafka cluster.
+
+Kafka Connect identifies a worker cluster by its group ID and by the names of the internal topics it uses.
+If multiple Kafka Connect clusters use the same values, they form a single Kafka Connect cluster and share internal state.
+
+When deploying multiple Kafka Connect clusters against the same target Kafka cluster, configure unique values for the following Kafka Connect worker properties in each deployment:
+
+* `group.id`
+* `config.storage.topic`
+* `offset.storage.topic`
+* `status.storage.topic`
+
+These settings are configured in the `.spec.target` section. 
 
 [source,yaml,subs="attributes+"]
 ----
@@ -33,13 +50,11 @@ spec:
 <3> Kafka topic that stores connector and task status configurations.
 <4> Kafka topic that stores connector and task status updates.
 
-NOTE: Values for the three topics must be the same for all instances with the same `group.id`.
+If multiple Kafka Connect clusters are deployed with the same worker group ID and internal topic names, they form a single Kafka Connect cluster and share internal state.
+This can result in unexpected behavior and replication errors.
 
-The `target` cluster specifies the target Kafka cluster used by Kafka Connect for its internal topics. 
-As a result, modifications to the `target`, group ID, and internal topic naming configuration are specific to the target Kafka cluster. 
-You don't need to make changes if two MirrorMaker 2 instances are using the same source Kafka cluster or in an active-active mode where each MirrorMaker 2 instance has a different target cluster.
+You do not need to change these settings when:
 
-However, if multiple MirrorMaker 2 instances share the same `target`, each instance connecting to the same target Kafka cluster is deployed with the same values. 
-In practice, this means all instances form a cluster and use the same internal topics.
-
-Multiple instances attempting to use the same internal topics will cause unexpected errors, so you must change the values of these properties for each instance.
+* Running multiple MirrorMaker 2 connectors in a single Kafka Connect cluster
+* Replicating data from the same source Kafka cluster to different target Kafka clusters by using separate Kafka Connect clusters
+* Deploying active-active replication, where each Kafka Connect cluster targets a different Kafka cluster
